# link-vacaciones-widget

./: .env.example  .gitignore  CLAUDE.md  bitbucket-pipelines.yml  distribute.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
patches/tauri-plugin-opener/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig
patches/tauri-plugin-opener/ios/Sources/: OpenerPlugin.swift
patches/tauri-plugin-opener/src/: error.rs  lib.rs  reveal_item_in_dir.rs  windows_shell_path.rs
src/: App.svelte
src-tauri/: Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: auth.rs  commands.rs  lib.rs  main.rs  tray.rs
src/components/: BusinessIcon.svelte  ClockButton.svelte  FeedbackModal.svelte  Icon.svelte  LoadingView.svelte  LocationPicker.svelte  LoginView.svelte  PopoverMain.svelte  SettingsPanel.svelte  StatusBadge.svelte  TodayLog.svelte  UserBadge.svelte  UserHeader.svelte  WarningBanner.svelte  WeeklySummary.svelte
src/lib/: api.ts  auth.ts  notifications.ts  portal.ts  tray.ts  types.ts
src/lib/badge/: business-icons.ts  selector.ts  suite.ts
src/stores/: auth.ts  checkin.ts  settings.ts
