[package]
name = "link-vacaciones-widget"
version = "0.1.0"
description = "Link Fichajes — macOS Menu Bar Widget"
authors = ["Adrián Peláez"]
edition = "2021"

[lib]
name = "link_vacaciones_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-store        = "2"
security-framework        = "2"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
tauri-plugin-autostart    = "2"
tauri-plugin-deep-link    = "2"
tauri-plugin-http         = "2"
tauri-plugin-opener       = "2"

[patch.crates-io]
tauri-plugin-opener = { path = "../patches/tauri-plugin-opener" }
